# diamant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml  test.yaml
.run/: Run.run.xml  Serve.run.xml
src/: api.rs  app.rs  cmd.rs  external.rs  io.rs  lib.rs  main.rs  serde_chrono_custom.rs
src/api/: config.rs  stop_time_details.rs  stops.rs  trips.rs
src/api/utils/: queries.rs
src/app/: gtfs.rs  route.rs  service_route.rs  stop_time.rs  stops.rs  test.rs  trip.rs
src/cmd/: db.rs  get.rs  make_db.rs  serve.rs  test.rs
src/cmd/db/: convert.rs  create.rs  get.rs
src/cmd/db/convert/: service_route_identity.rs
src/cmd/db/get/: routes.rs  trip_with_sequence_meta.rs
src/cmd/get/: routes.rs  trips.rs
tests/: 1-db-create.rs
tests/data/: agency.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  routes.txt  stop_times.txt  stops.txt  translations.txt  trips.txt
