[package]
name = "diamant"
version = "0.15.0"
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
csv = "1.1.5"
log = "0.4.14"
env_logger = "0.8.3"
anyhow = "1.0.38"
rusqlite = { version = "0.24.2", features = ["bundled", "array"] }
indicatif = "0.15.0"
thiserror = "1.0.24"
yaml-rust = "0.4.5"
serde = { version = "1", features = ["derive"] }
serde_with = "1.6.4"
serde_repr = "0.1.6"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde_rusqlite = "0.26.0"
strum = "0.20.0"
strum_macros = "0.20.1"
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.0"
ordered-float = { version = "2.1.1", features = ["serde"] }

